视觉还原：个人页

--- a/mia/Base.lproj/Me.storyboard
+++ b/mia/Base.lproj/Me.storyboard
@@ -108,11 +108,16 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WeC-tV-Uj9" userLabel="Container View">
                                             <rect key="frame" x="8" y="8" width="304" height="192"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="好喜欢里面的编曲" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="284" translatesAutoresizingMaskIntoConstraints="NO" id="5eK-0o-mpW">
-                                                    <rect key="frame" x="10" y="12" width="284" height="34"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="好喜欢里面的编曲" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="284" translatesAutoresizingMaskIntoConstraints="NO" id="5eK-0o-mpW" customClass="TTTAttributedLabel">
+                                                    <rect key="frame" x="10" y="12" width="284" height="28"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="lineSpacing">
+                                                            <real key="value" value="8"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2BQ-XL-Vkb">
                                                     <rect key="frame" x="10" y="52" width="284" height="100"/>
@@ -177,7 +182,7 @@
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vts-Pi-dMv">
-                                                    <rect key="frame" x="146" y="152" width="40" height="40"/>
+                                                    <rect key="frame" x="147" y="152" width="40" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="40" id="q3e-9T-B8L"/>
                                                         <constraint firstAttribute="height" constant="40" id="t4i-OY-0qZ"/>
@@ -188,7 +193,7 @@
                                                     </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q0n-se-8RI" userLabel="View Count View">
-                                                    <rect key="frame" x="186" y="161" width="33" height="22"/>
+                                                    <rect key="frame" x="188" y="161" width="33" height="22"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PF-ViewIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Krg-w3-3ms">
                                                             <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
@@ -212,7 +217,7 @@
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SCL-e0-Mfh" userLabel="Comment Count View">
-                                                    <rect key="frame" x="229" y="162" width="31" height="20"/>
+                                                    <rect key="frame" x="233" y="162" width="31" height="20"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PF-CommentIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Bfp-Il-gV1">
                                                             <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -256,11 +261,11 @@
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstItem="SCL-e0-Mfh" firstAttribute="centerY" secondItem="Vts-Pi-dMv" secondAttribute="centerY" id="9As-KX-UYf"/>
-                                                <constraint firstItem="SCL-e0-Mfh" firstAttribute="leading" secondItem="Q0n-se-8RI" secondAttribute="trailing" constant="10" id="A3V-Pr-SGA"/>
+                                                <constraint firstItem="SCL-e0-Mfh" firstAttribute="leading" secondItem="Q0n-se-8RI" secondAttribute="trailing" constant="12" id="A3V-Pr-SGA"/>
                                                 <constraint firstItem="5eK-0o-mpW" firstAttribute="top" secondItem="WeC-tV-Uj9" secondAttribute="top" constant="12" id="A79-GA-wiA"/>
-                                                <constraint firstItem="Q0n-se-8RI" firstAttribute="leading" secondItem="Vts-Pi-dMv" secondAttribute="trailing" id="DaJ-8K-QgT"/>
+                                                <constraint firstItem="Q0n-se-8RI" firstAttribute="leading" secondItem="Vts-Pi-dMv" secondAttribute="trailing" constant="1" id="DaJ-8K-QgT"/>
                                                 <constraint firstItem="XKc-rk-8eu" firstAttribute="leading" secondItem="2BQ-XL-Vkb" secondAttribute="leading" id="FGj-i6-HBa"/>
-                                                <constraint firstItem="4zk-Vv-HtB" firstAttribute="leading" secondItem="SCL-e0-Mfh" secondAttribute="trailing" constant="4" id="FSn-UJ-l1E"/>
+                                                <constraint firstItem="4zk-Vv-HtB" firstAttribute="leading" secondItem="SCL-e0-Mfh" secondAttribute="trailing" id="FSn-UJ-l1E"/>
                                                 <constraint firstAttribute="trailing" secondItem="4zk-Vv-HtB" secondAttribute="trailing" id="Hbm-pj-5EL"/>
                                                 <constraint firstItem="Vts-Pi-dMv" firstAttribute="top" secondItem="2BQ-XL-Vkb" secondAttribute="bottom" id="LaU-qa-CNK"/>
                                                 <constraint firstAttribute="bottom" secondItem="Vts-Pi-dMv" secondAttribute="bottom" id="OW8-v6-1ze"/>
@@ -270,7 +275,7 @@
                                                 <constraint firstItem="XKc-rk-8eu" firstAttribute="centerY" secondItem="Vts-Pi-dMv" secondAttribute="centerY" id="dD2-V2-UtU"/>
                                                 <constraint firstItem="2BQ-XL-Vkb" firstAttribute="trailing" secondItem="5eK-0o-mpW" secondAttribute="trailing" id="ej7-T8-CfM"/>
                                                 <constraint firstItem="4zk-Vv-HtB" firstAttribute="top" secondItem="2BQ-XL-Vkb" secondAttribute="bottom" id="izd-bj-1I2"/>
-                                                <constraint firstItem="2BQ-XL-Vkb" firstAttribute="top" secondItem="5eK-0o-mpW" secondAttribute="bottom" constant="6" id="rWU-UK-yFl"/>
+                                                <constraint firstItem="2BQ-XL-Vkb" firstAttribute="top" secondItem="5eK-0o-mpW" secondAttribute="bottom" constant="12" id="rWU-UK-yFl"/>
                                                 <constraint firstItem="2BQ-XL-Vkb" firstAttribute="leading" secondItem="5eK-0o-mpW" secondAttribute="leading" id="rdd-Fp-2zl"/>
                                                 <constraint firstAttribute="trailing" secondItem="5eK-0o-mpW" secondAttribute="trailing" constant="10" id="zHc-vb-py5"/>
                                             </constraints>
