--- a/mia/Base.lproj/Profile.storyboard
+++ b/mia/Base.lproj/Profile.storyboard
@@ -138,11 +138,16 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qe8-TQ-eDn" userLabel="Container View">
                                             <rect key="frame" x="8" y="8" width="304" height="192"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="好喜欢里面的编曲" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="284" translatesAutoresizingMaskIntoConstraints="NO" id="VZc-kF-vNu">
-                                                    <rect key="frame" x="10" y="12" width="284" height="34"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="好喜欢里面的编曲" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="284" translatesAutoresizingMaskIntoConstraints="NO" id="VZc-kF-vNu" customClass="TTTAttributedLabel">
+                                                    <rect key="frame" x="10" y="12" width="284" height="28"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="lineSpacing">
+                                                            <real key="value" value="8"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Brc-9e-1li">
                                                     <rect key="frame" x="10" y="52" width="284" height="100"/>
@@ -282,7 +287,7 @@
                                                 <constraint firstItem="VZc-kF-vNu" firstAttribute="top" secondItem="Qe8-TQ-eDn" secondAttribute="top" constant="12" id="SXl-Me-q03"/>
                                                 <constraint firstItem="VZc-kF-vNu" firstAttribute="leading" secondItem="Qe8-TQ-eDn" secondAttribute="leading" constant="10" id="ThC-sU-0e0"/>
                                                 <constraint firstItem="AuQ-UN-Jbn" firstAttribute="leading" secondItem="Xm4-bL-pTE" secondAttribute="trailing" id="Vh6-pp-K0Z"/>
-                                                <constraint firstItem="Brc-9e-1li" firstAttribute="top" secondItem="VZc-kF-vNu" secondAttribute="bottom" constant="6" id="dBf-aX-2xe"/>
+                                                <constraint firstItem="Brc-9e-1li" firstAttribute="top" secondItem="VZc-kF-vNu" secondAttribute="bottom" constant="12" id="dBf-aX-2xe"/>
                                                 <constraint firstAttribute="bottom" secondItem="Xm4-bL-pTE" secondAttribute="bottom" id="kPQ-gq-wc4"/>
                                                 <constraint firstItem="l8T-ZC-vro" firstAttribute="leading" secondItem="Brc-9e-1li" secondAttribute="leading" id="rFU-wP-xjM"/>
                                                 <constraint firstItem="M1g-uG-kgN" firstAttribute="leading" secondItem="AuQ-UN-Jbn" secondAttribute="trailing" constant="10" id="y0K-lW-O5b"/>
