--- a/mia/Views/Profile/DetailContainer/HXProfileDetailHeader.xib
+++ b/mia/Views/Profile/DetailContainer/HXProfileDetailHeader.xib
@@ -45,16 +45,16 @@
                     </userDefinedRuntimeAttributes>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qlD-y3-ZlQ" userLabel="Nick View">
-                    <rect key="frame" x="153" y="181" width="70" height="30"/>
+                    <rect key="frame" x="151" y="181" width="75" height="30"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="昵称" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uqx-5D-eyB">
-                            <rect key="frame" x="0.0" y="0.0" width="40" height="30"/>
+                            <rect key="frame" x="5" y="0.0" width="40" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qcP-EE-K6u">
-                            <rect key="frame" x="40" y="0.0" width="30" height="30"/>
+                            <rect key="frame" x="45" y="0.0" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="d5d-oz-aX7"/>
                                 <constraint firstAttribute="height" constant="30" id="p5f-4S-gye"/>
@@ -72,15 +72,15 @@
                         <constraint firstItem="qcP-EE-K6u" firstAttribute="leading" secondItem="uqx-5D-eyB" secondAttribute="trailing" id="W7N-Pn-bms"/>
                         <constraint firstAttribute="bottom" secondItem="qcP-EE-K6u" secondAttribute="bottom" id="X2c-RZ-Lkh"/>
                         <constraint firstAttribute="bottom" secondItem="uqx-5D-eyB" secondAttribute="bottom" id="ezd-Y8-ba2"/>
-                        <constraint firstItem="uqx-5D-eyB" firstAttribute="leading" secondItem="qlD-y3-ZlQ" secondAttribute="leading" id="rks-nc-9lM"/>
+                        <constraint firstItem="uqx-5D-eyB" firstAttribute="leading" secondItem="qlD-y3-ZlQ" secondAttribute="leading" constant="5" id="rks-nc-9lM"/>
                         <constraint firstAttribute="trailing" secondItem="qcP-EE-K6u" secondAttribute="trailing" id="w4m-lR-xa5"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BFm-Y6-5Tj" userLabel="Play View" customClass="HXIBView">
-                    <rect key="frame" x="16" y="284" width="155" height="30"/>
+                    <rect key="frame" x="16" y="286" width="147" height="28"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5x0-Sd-5K7">
-                            <rect key="frame" x="20" y="5" width="115" height="20"/>
+                            <rect key="frame" x="16" y="4" width="115" height="20"/>
                             <subviews>
                                 <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MP-PlayIcon" translatesAutoresizingMaskIntoConstraints="NO" id="gVZ-Fc-ga3">
                                     <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
@@ -129,10 +129,10 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <gestureRecognizers/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="5x0-Sd-5K7" secondAttribute="bottom" constant="5" id="11b-As-hM8"/>
-                        <constraint firstAttribute="trailing" secondItem="5x0-Sd-5K7" secondAttribute="trailing" constant="20" id="3hR-pr-953"/>
-                        <constraint firstItem="5x0-Sd-5K7" firstAttribute="leading" secondItem="BFm-Y6-5Tj" secondAttribute="leading" constant="20" id="AWK-ea-wz4"/>
-                        <constraint firstItem="5x0-Sd-5K7" firstAttribute="top" secondItem="BFm-Y6-5Tj" secondAttribute="top" constant="5" id="kQz-n7-4uc"/>
+                        <constraint firstAttribute="bottom" secondItem="5x0-Sd-5K7" secondAttribute="bottom" constant="4" id="11b-As-hM8"/>
+                        <constraint firstAttribute="trailing" secondItem="5x0-Sd-5K7" secondAttribute="trailing" constant="16" id="3hR-pr-953"/>
+                        <constraint firstItem="5x0-Sd-5K7" firstAttribute="leading" secondItem="BFm-Y6-5Tj" secondAttribute="leading" constant="16" id="AWK-ea-wz4"/>
+                        <constraint firstItem="5x0-Sd-5K7" firstAttribute="top" secondItem="BFm-Y6-5Tj" secondAttribute="top" constant="4" id="kQz-n7-4uc"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
