--- a/mia/Base.lproj/Me.storyboard
+++ b/mia/Base.lproj/Me.storyboard
@@ -130,7 +130,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="in1-f4-54f">
-                                                            <rect key="frame" x="115" y="32" width="161" height="37"/>
+                                                            <rect key="frame" x="115" y="31" width="161" height="39"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pramore" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="161" translatesAutoresizingMaskIntoConstraints="NO" id="WGq-21-XIL">
                                                                     <rect key="frame" x="0.0" y="0.0" width="161" height="20"/>
@@ -142,7 +142,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A-Lin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8rc-Yb-seR">
-                                                                    <rect key="frame" x="0.0" y="20" width="161" height="17"/>
+                                                                    <rect key="frame" x="0.0" y="22" width="161" height="17"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <color key="textColor" red="0.62745098040000002" green="0.62745098040000002" blue="0.62745098040000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -150,7 +150,7 @@
                                                             </subviews>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             <constraints>
-                                                                <constraint firstItem="8rc-Yb-seR" firstAttribute="top" secondItem="WGq-21-XIL" secondAttribute="bottom" id="WSM-Ga-QHx"/>
+                                                                <constraint firstItem="8rc-Yb-seR" firstAttribute="top" secondItem="WGq-21-XIL" secondAttribute="bottom" constant="2" id="WSM-Ga-QHx"/>
                                                                 <constraint firstAttribute="bottom" secondItem="8rc-Yb-seR" secondAttribute="bottom" id="cDf-GZ-rwX"/>
                                                                 <constraint firstAttribute="trailing" secondItem="WGq-21-XIL" secondAttribute="trailing" id="eFv-u2-2ew"/>
                                                                 <constraint firstItem="8rc-Yb-seR" firstAttribute="leading" secondItem="in1-f4-54f" secondAttribute="leading" id="kfF-qW-s9C"/>
