--- a/mia/Base.lproj/Profile.storyboard
+++ b/mia/Base.lproj/Profile.storyboard
@@ -160,7 +160,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wvw-MT-H97">
-                                                            <rect key="frame" x="115" y="32" width="161" height="37"/>
+                                                            <rect key="frame" x="115" y="31" width="161" height="39"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pramore" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="161" translatesAutoresizingMaskIntoConstraints="NO" id="Zep-6s-mp4">
                                                                     <rect key="frame" x="0.0" y="0.0" width="161" height="20"/>
@@ -172,7 +172,7 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A-Lin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVD-2g-1IU">
-                                                                    <rect key="frame" x="0.0" y="20" width="161" height="17"/>
+                                                                    <rect key="frame" x="0.0" y="22" width="161" height="17"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <color key="textColor" red="0.62745098039215685" green="0.62745098039215685" blue="0.62745098039215685" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -181,7 +181,7 @@
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="trailing" secondItem="xVD-2g-1IU" secondAttribute="trailing" id="9ow-Qd-6rM"/>
-                                                                <constraint firstItem="xVD-2g-1IU" firstAttribute="top" secondItem="Zep-6s-mp4" secondAttribute="bottom" id="HfG-mQ-Xbg"/>
+                                                                <constraint firstItem="xVD-2g-1IU" firstAttribute="top" secondItem="Zep-6s-mp4" secondAttribute="bottom" constant="2" id="HfG-mQ-Xbg"/>
                                                                 <constraint firstItem="Zep-6s-mp4" firstAttribute="top" secondItem="Wvw-MT-H97" secondAttribute="top" id="UCV-9T-UVm"/>
                                                                 <constraint firstAttribute="trailing" secondItem="Zep-6s-mp4" secondAttribute="trailing" id="Uhz-9B-zjn"/>
                                                                 <constraint firstAttribute="bottom" secondItem="xVD-2g-1IU" secondAttribute="bottom" id="WZs-zE-Viq"/>
