--- a/mia/Views/Discovery/Content/Card/HXDiscoveryCardView.xib
+++ b/mia/Views/Discovery/Content/Card/HXDiscoveryCardView.xib
@@ -33,21 +33,21 @@
                         <outlet property="delegate" destination="-1" id="kVK-U8-tA3"/>
                     </connections>
                 </view>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cgq-mw-184" userLabel="Share Content View">
-                    <rect key="frame" x="15" y="335" width="290" height="90"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cgq-mw-184" userLabel="Share Content View">
+                    <rect key="frame" x="15" y="335" width="290" height="86"/>
                     <subviews>
                         <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BBC要按照基本法来拍纪录片，这次做的很好，我很欣慰，他们以前还too young，不知道裤子要提多高，我和他们谈笑风生之后，他们总算是明白了一些人生哲理" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="290" translatesAutoresizingMaskIntoConstraints="NO" id="Wib-Wl-9pg" customClass="TTTAttributedLabel">
-                            <rect key="frame" x="0.0" y="0.0" width="290" height="40"/>
+                            <rect key="frame" x="0.0" y="0.0" width="290" height="42"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="40" id="IfE-iE-fVS"/>
+                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="42" id="IfE-iE-fVS"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="lineSpacing">
-                                    <real key="value" value="4"/>
+                                    <real key="value" value="6"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                             <connections>
@@ -58,14 +58,14 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <gestureRecognizers/>
                     <constraints>
-                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Wib-Wl-9pg" secondAttribute="bottom" id="7W2-pv-2ow"/>
                         <constraint firstAttribute="trailing" secondItem="Wib-Wl-9pg" secondAttribute="trailing" id="Gof-lf-MDx"/>
                         <constraint firstItem="Wib-Wl-9pg" firstAttribute="leading" secondItem="cgq-mw-184" secondAttribute="leading" id="Mfi-Bp-byB"/>
+                        <constraint firstAttribute="bottom" secondItem="Wib-Wl-9pg" secondAttribute="bottom" id="X8m-bn-OYK"/>
                         <constraint firstItem="Wib-Wl-9pg" firstAttribute="top" secondItem="cgq-mw-184" secondAttribute="top" id="cPA-T4-GwY"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KMu-t3-LtB" userLabel="Infecter View" customClass="HXInfectView">
-                    <rect key="frame" x="15" y="437" width="290" height="32"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KMu-t3-LtB" userLabel="Infecter View" customClass="HXInfectView">
+                    <rect key="frame" x="15" y="433" width="290" height="32"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <gestureRecognizers/>
                     <constraints>
@@ -75,18 +75,18 @@
                         <outlet property="delegate" destination="-1" id="NwV-65-W4P"/>
                     </connections>
                 </view>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nFm-6C-XzL" userLabel="Favorite View">
-                    <rect key="frame" x="15" y="481" width="290" height="30"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nFm-6C-XzL" userLabel="Favorite View">
+                    <rect key="frame" x="15" y="477" width="290" height="32"/>
                     <subviews>
-                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="D-FavoriteIcon" translatesAutoresizingMaskIntoConstraints="NO" id="TPV-BU-Fvz">
-                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="D-FavoriteIcon" translatesAutoresizingMaskIntoConstraints="NO" id="TPV-BU-Fvz">
+                            <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
                             <gestureRecognizers/>
                             <connections>
                                 <outletCollection property="gestureRecognizers" destination="cv0-0w-qFJ" appends="YES" id="YrK-g8-4Rk"/>
                             </connections>
                         </imageView>
-                        <label opaque="NO" contentMode="left" verticalHuggingPriority="251" misplaced="YES" text="0人收藏" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mzl-Fx-DG0">
-                            <rect key="frame" x="45" y="0.0" width="245" height="30"/>
+                        <label opaque="NO" contentMode="left" verticalHuggingPriority="251" text="0人收藏" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mzl-Fx-DG0">
+                            <rect key="frame" x="47" y="0.0" width="243" height="32"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -103,17 +103,17 @@
                         <constraint firstItem="TPV-BU-Fvz" firstAttribute="leading" secondItem="nFm-6C-XzL" secondAttribute="leading" id="wCY-jW-Hbf"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S0i-8S-rZK" userLabel="Comment Container View">
-                    <rect key="frame" x="15" y="523" width="290" height="30"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S0i-8S-rZK" userLabel="Comment Container View">
+                    <rect key="frame" x="15" y="521" width="290" height="32"/>
                     <subviews>
-                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="D-CommentIcon" translatesAutoresizingMaskIntoConstraints="NO" id="CqQ-VA-ehL">
-                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="D-CommentIcon" translatesAutoresizingMaskIntoConstraints="NO" id="CqQ-VA-ehL">
+                            <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
                         </imageView>
-                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7sQ-rK-X8E" userLabel="Comment Centent View">
-                            <rect key="frame" x="45" y="0.0" width="245" height="30"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7sQ-rK-X8E" userLabel="Comment Centent View">
+                            <rect key="frame" x="47" y="0.0" width="243" height="32"/>
                             <subviews>
-                                <label opaque="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" misplaced="YES" text="说说你此刻的想法..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rkS-0f-fMn" userLabel="用户评论内容">
-                                    <rect key="frame" x="56" y="0.0" width="189" height="30"/>
+                                <label opaque="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="说说你此刻的想法..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rkS-0f-fMn" userLabel="用户评论内容">
+                                    <rect key="frame" x="56" y="0.0" width="187" height="32"/>
                                     <gestureRecognizers/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
@@ -122,8 +122,8 @@
                                         <outletCollection property="gestureRecognizers" destination="KSM-fD-ufy" appends="YES" id="6SX-xc-5AJ"/>
                                     </connections>
                                 </label>
-                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AGa-up-Gju" userLabel="Commentators Name View" customClass="HXIBView">
-                                    <rect key="frame" x="0.0" y="3" width="48" height="25"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AGa-up-Gju" userLabel="Commentators Name View" customClass="HXIBView">
+                                    <rect key="frame" x="0.0" y="4" width="48" height="25"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="昵称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V83-uH-kB6" userLabel="评论用户昵称">
                                             <rect key="frame" x="10" y="4" width="28" height="17"/>
@@ -132,7 +132,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" red="0.92156862745098034" green="0.93725490196078431" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" red="0.89411764705882346" green="0.90980392156862744" blue="0.9137254901960784" alpha="1" colorSpace="calibratedRGB"/>
                                     <gestureRecognizers/>
                                     <constraints>
                                         <constraint firstItem="V83-uH-kB6" firstAttribute="leading" secondItem="AGa-up-Gju" secondAttribute="leading" constant="10" id="4hp-h2-qqb"/>
@@ -143,6 +143,12 @@
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                             <real key="value" value="12.5"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                            <real key="value" value="0.5"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                            <color key="value" red="0.83921568627450982" green="0.85490196078431369" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
@@ -188,7 +194,6 @@
                 <constraint firstItem="KMu-t3-LtB" firstAttribute="top" secondItem="cgq-mw-184" secondAttribute="bottom" constant="12" id="dBR-gk-RJP"/>
                 <constraint firstItem="S0i-8S-rZK" firstAttribute="leading" secondItem="X5g-lg-Nqm" secondAttribute="leading" constant="15" id="kFM-pR-eaD"/>
                 <constraint firstItem="nFm-6C-XzL" firstAttribute="top" secondItem="KMu-t3-LtB" secondAttribute="bottom" constant="12" id="sGq-KA-rqf"/>
-                <constraint firstAttribute="bottom" secondItem="S0i-8S-rZK" secondAttribute="bottom" constant="15" id="ucW-su-1AI"/>
                 <constraint firstItem="cgq-mw-184" firstAttribute="trailing" secondItem="KMu-t3-LtB" secondAttribute="trailing" id="yyd-8e-Thj"/>
                 <constraint firstItem="ZlF-TJ-5uI" firstAttribute="top" secondItem="X5g-lg-Nqm" secondAttribute="top" id="zLK-9m-HeI"/>
             </constraints>
