--- a/mia/Views/Discovery/Content/PlaceHolder/HXDiscoveryPlaceHolderCardView.xib
+++ b/mia/Views/Discovery/Content/PlaceHolder/HXDiscoveryPlaceHolderCardView.xib
@@ -12,16 +12,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Npw-Xg-Njl">
-                    <rect key="frame" x="65" y="257" width="190" height="54"/>
+                    <rect key="frame" x="65" y="253" width="190" height="62"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="糟糕,暂时没有歌曲了" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6oL-oA-XAF">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="糟糕,暂没有歌曲了" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6oL-oA-XAF">
                             <rect key="frame" x="0.0" y="0.0" width="190" height="22"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="一大波好歌正在安利给你的路上请耐心等待..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="195" translatesAutoresizingMaskIntoConstraints="NO" id="zGp-kQ-SUS">
-                            <rect key="frame" x="0.0" y="22" width="190" height="32"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="一大波歌曲正在安利给你的路上请耐心等待" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="195" translatesAutoresizingMaskIntoConstraints="NO" id="zGp-kQ-SUS" customClass="TTTAttributedLabel">
+                            <rect key="frame" x="0.0" y="30" width="190" height="32"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="32" id="WOs-SA-FNj"/>
                                 <constraint firstAttribute="width" constant="190" id="bVh-MP-nyZ"/>
@@ -29,6 +29,11 @@
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <color key="textColor" red="0.50196078431372548" green="0.50196078431372548" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="lineSpacing">
+                                    <real key="value" value="8"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -38,7 +43,7 @@
                         <constraint firstAttribute="bottom" secondItem="zGp-kQ-SUS" secondAttribute="bottom" id="SeW-Zh-3Oz"/>
                         <constraint firstAttribute="trailing" secondItem="zGp-kQ-SUS" secondAttribute="trailing" id="UYN-aR-Po3"/>
                         <constraint firstItem="6oL-oA-XAF" firstAttribute="top" secondItem="Npw-Xg-Njl" secondAttribute="top" id="lRa-48-Ni1"/>
-                        <constraint firstItem="zGp-kQ-SUS" firstAttribute="top" secondItem="6oL-oA-XAF" secondAttribute="bottom" id="lsj-va-vDY"/>
+                        <constraint firstItem="zGp-kQ-SUS" firstAttribute="top" secondItem="6oL-oA-XAF" secondAttribute="bottom" constant="8" id="lsj-va-vDY"/>
                         <constraint firstItem="6oL-oA-XAF" firstAttribute="leading" secondItem="Npw-Xg-Njl" secondAttribute="leading" id="xB8-yF-5aa"/>
                     </constraints>
                 </view>
@@ -63,7 +68,7 @@
                     </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="D-NoMoreIcon" translatesAutoresizingMaskIntoConstraints="NO" id="giS-NW-xkM">
-                    <rect key="frame" x="95" y="67" width="130" height="130"/>
+                    <rect key="frame" x="95" y="63" width="130" height="130"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
